# trench-coat

./: .gitignore  README.md  Trench-Coat-Install-Guide.docx  Trench-Coat-Install-Guide.md  V4.uf2  WarpedPinballProgrammer.spec  build.sh  example.py  flash.py  main.py  main.spec  pyproject.toml  ray.py  readme.md  requirements.txt  trenchcoat.py  trenchcoat.spec
.github/workflows/: build.yml  guide-pdf.yml  publish_python_package.yml
mpremote/: commands.py
src/: __init__.py  cli.py  core.py  interactive.py  main.py  ray.py  ui.py  util.py
tests/: test_core.py  test_interactive.py  test_ray.py  test_util.py
uf2/: Vector_DataEast_v1.uf2  Vector_WPC_v5.uf2
